It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, May 16, 2009
---------------------------------------------------------------------
- Added missing object handling for #show action (all core objects).

Fri, May 15, 2009
---------------------------------------------------------------------
- Replaced explicit MySQL trigger creation with [add_uuid_trigger].

Thu, May 14, 2009
---------------------------------------------------------------------
- Started with LH #34 (Gracefully handle missing objects).
- Replaced regular flash messages with non-sticky ones.
- Make sure search box gets shown after creating, updating, or deleting an account.

Wed, May 13, 2009
---------------------------------------------------------------------
- Implemented search for campaigns, opportunities, accounts, and contacts.
- Made it easier to reject leads (LH #35).
- Added sidebar summary for accounts.
- Added web presence links for leads and contacts.

Tue, May 12, 2009
---------------------------------------------------------------------
- Added company field to leads search.

Mon, May 11, 2009
---------------------------------------------------------------------
- Implemented live search for leads that can be reused in other controllers.
- Fixed demo data generation to produce random recently viewed items list.

Sun, May 10, 2009
---------------------------------------------------------------------
- More work on simplifying search.

Fri, May 8, 2009
---------------------------------------------------------------------
- Created initial implementation of live search (Leads only so far).

Thu, May 7, 2009
---------------------------------------------------------------------
- Installed [simple_column_search] plugin.
- Initial implementation of live search for Leads.

Wed, May 6, 2009
---------------------------------------------------------------------