@@ -25,6 +25,10 @@ describe CampaignsController do
     it "should map #destroy" do
       route_for(:controller => "campaigns", :action => "destroy", :id => 1).should == "/campaigns/1"
     end
+
+    it "should map #search" do
+      route_for(:controller => "campaigns", :action => "search", :id => 1).should == "/campaigns/search/1"
+    end
   end
 
   describe "route recognition" do
@@ -54,6 +58,10 @@ describe CampaignsController do
   
     it "should generate params for #destroy" do
       params_from(:delete, "/campaigns/1").should == {:controller => "campaigns", :action => "destroy", :id => "1"}
+    end
+
+    it "should generate params for #search" do
+      params_from(:get, "/campaigns/search/1").should == {:controller => "campaigns", :action => "search", :id => "1"}
     end
   end
 end
